doc/source/_static/css/getting_started.css
/* Getting started pages */

/* data intro */
.gs-data {
  font-size: 0.9rem;
}

.gs-data-title {
  align-items: center;
  font-size: 0.9rem;
}

.gs-data-header {
  background-color: var(--pst-color-on-surface);
}

.gs-data-list {
  background-color: var(--pst-color-on-background);
}

.gs-data-title .badge {
  margin: 10px;
  padding: 5px;
}

.gs-data .badge {
  cursor: pointer;
  padding: 10px;
  border: none;
  text-align: left;
  outline: none;
  font-size: 12px;
}

.gs-data .btn {
 background-color: grey;
 border: none;
}

/* note/alert properties */

.alert-heading {
  font-size: 1.2rem;
}

/* callout properties */
.gs-callout {
  padding: 20px;
  margin: 20px 0;
  border: 1px solid #eee;
  border-left-width: 5px;
  border-radius: 3px;
}
.gs-callout h4 {
  margin-top: 0;
  margin-bottom: 5px;
}
.gs-callout p:last-child {
  margin-bottom: 0;
}
.gs-callout code {
  border-radius: 3px;
}
.gs-callout+.gs-callout {
  margin-top: -5px;
}
.gs-callout-remember {
  border-left-color: var(--pst-color-secondary);
  align-items: center;
  font-size: 1.2rem;
}
.gs-callout-remember h4 {
  color:  var(--pst-color-secondary);
}

/* reference to user guide */
.gs-torefguide {
  align-items: center;
  font-size: 0.9rem;
  background-color: var(--pst-color-on-background);
  border-radius: .25rem;
  padding: 2px;
}

.gs-torefguide .badge {
  background-color: var(--pst-color-primary);
  margin: 10px 10px 10px 10px;
  padding: 5px;
}

.gs-torefguide p {
  margin-top: 1rem;
}

/* question-task environment */

ul.task-bullet, ol.custom-bullet{
  list-style:none;
  padding-left: 0;
  margin-top: 2em;
}

ul.task-bullet > li:before {
    content:"";
    height:2em;
    width:2em;
    display:block;
    float:left;
    margin-left:-2em;
    background-position:center;
    background-repeat:no-repeat;
    background-color: var(--pst-color-primary);
    border-radius: 50%;
    background-size:100%;
    background-image:url('../question_mark_noback.svg');
  }

ul.task-bullet > li {
  border-left: 1px solid var(--pst-color-primary);
  padding-left:1em;
}

ul.task-bullet > li > p:first-child {
  font-size: 1.1rem;
  padding-left: 0.75rem;
}

/* Getting started index page */

.comparison-card {
  background-color: var(--pst-color-background);
  border-radius:0;
  padding: 30px 10px 10px 10px;
  margin: 10px 0px;
}

.comparison-card p.card-text {
  margin: 0px;
}

.comparison-card .sd-card-img-top {
  margin: 10px;
  margin-bottom: 20px;
  height: 52px;
  background: none !important;
}

.comparison-card .sd-btn-secondary {
  background-color: #6c757d !important;
  border-color: #6c757d !important;
}

.comparison-card .sd-btn-secondary:hover {
  background-color: #5a6268 !important;
  border-color: #545b62 !important;
}

.comparison-card .card-footer {
  border: none;
  background-color: var(--pst-color-background);
}

.install-block {
  padding-bottom: 30px;
}

.install-card .card-header {
  border: none;
  background-color: transparent;
  padding: 1rem 1rem 0rem 1rem;
}

.install-card .card-header p.card-text {
  font-size: 1.1rem;
  font-weight: bold;
}

.install-card .card-footer {
  border: none;
  background-color: transparent;
}

.install-card pre {
  margin: 0 1em 1em 1em;
}

.install-card .sd-btn-secondary {
  background-color: #6c757d !important;
  border-color: #6c757d !important;
}

.install-card .sd-btn-secondary:hover {
  background-color: #5a6268 !important;
  border-color: #545b62 !important;
}

.custom-button {
  background-color:#DCDCDC;
  border: none;
  color: #484848;
  text-align: center;
  text-decoration: none;
  display: inline-block;
  font-size: 0.9rem;
  border-radius: 0.5rem;
  max-width: 120px;
  padding: 0.5rem 0rem;
}

.custom-button a {
  color: #484848;
}

.custom-button p {
  margin-top: 0;
  margin-bottom: 0rem;
  color: #484848;
}

/* intro to tutorial collapsed cards */

.tutorial-accordion {
  margin-top: 20px;
  margin-bottom: 20px;
}

.tutorial-card .card-header.card-link .btn {
  margin-right: 12px;
}

.tutorial-card .card-header.card-link .btn:after {
  content: "-";
}

.tutorial-card .card-header.card-link.collapsed .btn:after {
  content: "+";
}

.tutorial-card-header-1 {
  justify-content: space-between;
  align-items: center;
}

.tutorial-card-header-2 {
  justify-content: flex-start;
  align-items: center;
  font-size: 1.3rem;
}

.tutorial-card .card-header {
  --bs-card-cap-color: var(--pst-color-text-base);
  color: var(--pst-color-text-base);
  cursor: pointer;
  background-color: var(--pst-color-surface);
  border: 1px solid var(--pst-color-border)
}

.tutorial-card .card-body {
  background-color: var(--pst-color-on-background);
  color: var(--pst-color-text-base);
}

.tutorial-card .badge {
  background-color: var(--pst-color-primary);
  margin: 10px 10px 10px 10px;
  padding: 5px;
}

.tutorial-card .gs-badge-link p {
  margin: 0px;
}


.tutorial-card .gs-badge-link a {
  color: var(--pst-color-primary-text);
  text-decoration: none;
}

.tutorial-card .badge:hover {
  background-color: grey;
}

